--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,5 @@
 {
+  "extends": ["stylelint-config-standard-scss"],
   "plugins": ["stylelint-prettier"],
   "rules": {
     "prettier/prettier": [true, { "endOfLine": "auto" }],
