--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
